--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "async-polling": "^0.2.1",
+    "get-json": "^1.0.0",
+    "serialport": "^6.0.4"
+  }
 }
